[package]
name = "spotify-api-playground"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
sled = "0.30.3"
rspotify = "0.7.0"
serde_cbor = "0.10.2"
failure = "0.1.6"
log = "0.4.8"
simple_logger = "1.3.0"
regex = "1.3.1"
once_cell = "1.2.0"

[[bin]]
path = "src/bin/enrich_playlist.rs"
name = "enrich_playlist"
